--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
   <div class="button-flex">
     <div class="button-delete-item">
-      <input class="button-delete" type="submit" name="submit" value="削除">
+      <input class="button-delete" type="reset" name="reset" value="削除">
     </div>
     <div class="button-submit-item">
       <input class="button-submit" type="submit" name="submit" value="送信">
